<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mockway_lua_moveit</name>
  <version>0.1.0</version>
  <description>
    使用 sol2 + Lua 封装 MoveIt 和 MoveIt Servo 指令的 ROS2 节点，
    支持关节手动、笛卡尔手动、点到点规划和直线运动。
  </description>
  <maintainer email="TODO@email.com">Jelatine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>moveit_mockway_config</exec_depend>
  <exec_depend>mockway_moveit_servo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
